
Introduced eplus_adduvf program to compute user view factors for EnergyPlus.

Changed image-plane sampling in rpict to use Hilbert curve, which gives
less of a brushed/striped appearance to output pixels with -u- (default).

Added ltview and ltpict Perl scripts contributed by Axel Jacobs, inspired
by Rob Guglielmetti.

Added header variables for NROWS, NCOLS and NCOMP to help standardize
matrix files.  This functionality has been incorporated into
rcollate, gendaymtx, and dctimestep.

Created rmtxop utility to operate on multi-component matrices.  This
facilitates some daylight matrix calculations, and provides a general
tool for manipulating matrix data.

****** COMPATIBILITY CHANGE ********
Introduced new Hessian-based error control in irradiance caching (ambient)
calculation.  Since the format of the stored ambient values is different,
the old files will be rejected with an error message and must be removed.
The programs may be compiled with the -DOLDAMB option if this is a problem.

Added -p option to rcontrib to set function file parameters on a per-modifier
basis to simplify bin evaluation.

Created rfluxmtx program to compute flux transfer matrices from a sender
surface to one or more receiver surfaces.  (Renamed the file klems_int.cal
to klems_full.cal in the process.)

Added "-c" option to getinfo to execute command on data segment.

=====================
Version 4.3

Changed rmtxop so it writes out same type as lesser of inputs unless
direction otherwise using -f? option.

Changed order of oconv arguments in rfluxmtx so user can specify input
octree using -i option at the end instead of (or in addition to) a
list of scene files.

Added support for argument expansion to rfluxmtx and bug fixes.

Fixed bug in indirect hemisphere sampling for some corner cases.

Added default specular lobe to BSDF interpolation.

Set minimum number of shadow checks before direct optimization (4).

(Above changes included in 4.2.1 patch release.)